[gd_scene load_steps=13 format=3 uid="uid://chjie87r2ygl"]

[ext_resource type="Theme" uid="uid://bqc5t842iovlb" path="res://elements/GUI/system/default_theme.tres" id="1_rprho"]
[ext_resource type="Texture2D" uid="uid://c6fa0h4nts21j" path="res://elements/GUI/textures/cart.png" id="2_0fnv0"]
[ext_resource type="Script" uid="uid://nhlctoobyq2" path="res://elements/GUI/component/shop/shop_item.gd" id="2_xx0a6"]
[ext_resource type="Texture2D" uid="uid://ddwssa4p8i2ke" path="res://elements/GUI/textures/Feed icon.png" id="3_rjnff"]
[ext_resource type="PackedScene" uid="uid://1to6jbk2xbv3" path="res://elements/GUI/component/audio_component/audio_component.tscn" id="4_1husj"]
[ext_resource type="Texture2D" uid="uid://b2qo0qws2r5dx" path="res://elements/GUI/textures/coin_money.png" id="5_83t1c"]

[sub_resource type="Animation" id="Animation_6jivr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_maht6"]
resource_name = "selected"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10fkm"]
_data = {
&"RESET": SubResource("Animation_6jivr"),
&"selected": SubResource("Animation_maht6")
}

[sub_resource type="Animation" id="Animation_ku4ap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8ukxg"]
resource_name = "hover"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0436332, -0.0436332, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hover_audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kyc2m"]
_data = {
&"RESET": SubResource("Animation_ku4ap"),
&"hover": SubResource("Animation_8ukxg")
}

[node name="shop_card" type="TextureRect" groups=["shop_card"]]
custom_minimum_size = Vector2(384, 384)
offset_right = 256.0
offset_bottom = 256.0
pivot_offset = Vector2(72, 79)
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_rprho")
theme_type_variation = &"PanelSpiked"
texture = ExtResource("2_0fnv0")
expand_mode = 1
script = ExtResource("2_xx0a6")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 384.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12
alignment = 1

[node name="control" type="Control" parent="margin/vbox"]
show_behind_parent = true
custom_minimum_size = Vector2(300, 270)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="margin/vbox/control"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 0
offset_right = 384.0
offset_bottom = 300.0

[node name="sprite" type="TextureRect" parent="margin/vbox/control/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("3_rjnff")
expand_mode = 1
stretch_mode = 5

[node name="item_name" type="Label" parent="margin/vbox/control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 32
text = "Название предмета"
horizontal_alignment = 1

[node name="item_type" type="Label" parent="margin/vbox/control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Тип"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="margin/vbox/control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="item_price" type="Label" parent="margin/vbox/control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Цена"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="margin/vbox/control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("5_83t1c")
expand_mode = 1

[node name="button" type="Button" parent="margin/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"shop_button"
theme_override_font_sizes/font_size = 32
text = "BUY"

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_10fkm")
}

[node name="hover_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kyc2m")
}

[node name="hover_audio" parent="." instance=ExtResource("4_1husj")]
volume_db = -10.0

[node name="click_audio" parent="." instance=ExtResource("4_1husj")]
volume_db = 4.0
